--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "aos": "^2.3.4",
     "daisyui": "^4.12.13",
     "emailjs-com": "^3.2.0",
