--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "antd": "^5.22.2",
     "aos": "^2.3.4",
     "daisyui": "^4.12.13",
     "emailjs-com": "^3.2.0",
+    "flowbite-react": "^0.10.2",
     "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
+    "swiper": "^11.1.15",
     "tsparticles": "^3.5.0",
     "typewriter-effect": "^2.21.0"
   },
